some alignments fixed

--- a/style.css
+++ b/style.css
@@ -88,10 +88,9 @@ body {
   opacity: 0;
   transition: opacity 0.1s linear;
   position: absolute;
-  /* top: 0px; */
   right: 20px;
+  top: 75px;
   border: 2px solid var(--retro-green);
-  border-top: none;
   border-left: none;
 }
 .menu > ul > li {
